# servicer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  snapcraft.yaml
.github/workflows/: release.yml
src/: main.rs  systemd.rs
src/handlers/: handle_cat_service_file.rs  handle_create_service.rs  handle_delete_service.rs  handle_disable_service.rs  handle_edit_service_file.rs  handle_enable_service.rs  handle_print_paths.rs  handle_print_service_file.rs  handle_reload_service.rs  handle_rename_service.rs  handle_show_logs.rs  handle_show_status.rs  handle_start.rs  handle_start_service.rs  handle_stop_service.rs  mod.rs
src/utils/: find_binary_path.rs  mod.rs  process_status.rs  service_actions.rs  service_names.rs  systemd.rs
