[package]
name = "servicer"
authors = ["Shardul Aeer <aeershardul@gmail.com>"]
description = "Simplify Service Management on systemd"
version = "0.1.13"
edition = "2021"
license = "MIT"
homepage = "https://servicer.dev"
repository = "https://github.com/servicer-labs/servicer"
keywords = ["systemd", "dbus", "service", "process"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "fs"] }
clap = { version = "4.4.6", features = ["derive"] }
cli-table = "0.4.7"
indoc = "2.0.4"
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
bytesize = "1.3.0"
libc = "0.2.149"
futures = "0.3.28"
tempfile = "3.8.0"
regex = "1.10.2"
